welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value vuBiscuit
	var vuBiscuit():Boolean=false 
            ^Program:4: error: not found: value vuBiscuit
		if(vuBiscuit==false){
                   ^